; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/c67x00/extr_c67x00-ll-hpi.c_hpi_write_words_le16.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/c67x00/extr_c67x00-ll-hpi.c_hpi_write_words_le16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.c67x00_device = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@HPI_ADDR = common dso_local global i32 0, align 4
@HPI_DATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.c67x00_device*, i32, i32*, i32)* @hpi_write_words_le16 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hpi_write_words_le16(%struct.c67x00_device* %0, i32 %1, i32* %2, i32 %3) #0 {
  %5 = alloca %struct.c67x00_device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store %struct.c67x00_device* %0, %struct.c67x00_device** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = load %struct.c67x00_device*, %struct.c67x00_device** %5, align 8
  %12 = getelementptr inbounds %struct.c67x00_device, %struct.c67x00_device* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i64, i64* %9, align 8
  %15 = call i32 @spin_lock_irqsave(i32* %13, i64 %14)
  %16 = load %struct.c67x00_device*, %struct.c67x00_device** %5, align 8
  %17 = load i32, i32* @HPI_ADDR, align 4
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @hpi_write_reg(%struct.c67x00_device* %16, i32 %17, i32 %18)
  store i32 0, i32* %10, align 4
  br label %20

20:                                               ; preds = %32, %4
  %21 = load i32, i32* %10, align 4
  %22 = load i32, i32* %8, align 4
  %23 = icmp slt i32 %21, %22
  br i1 %23, label %24, label %35

24:                                               ; preds = %20
  %25 = load %struct.c67x00_device*, %struct.c67x00_device** %5, align 8
  %26 = load i32, i32* @HPI_DATA, align 4
  %27 = load i32*, i32** %7, align 8
  %28 = getelementptr inbounds i32, i32* %27, i32 1
  store i32* %28, i32** %7, align 8
  %29 = load i32, i32* %27, align 4
  %30 = call i32 @le16_to_cpu(i32 %29)
  %31 = call i32 @hpi_write_reg(%struct.c67x00_device* %25, i32 %26, i32 %30)
  br label %32

32:                                               ; preds = %24
  %33 = load i32, i32* %10, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %10, align 4
  br label %20

35:                                               ; preds = %20
  %36 = load %struct.c67x00_device*, %struct.c67x00_device** %5, align 8
  %37 = getelementptr inbounds %struct.c67x00_device, %struct.c67x00_device* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i32 0, i32 0
  %39 = load i64, i64* %9, align 8
  %40 = call i32 @spin_unlock_irqrestore(i32* %38, i64 %39)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @hpi_write_reg(%struct.c67x00_device*, i32, i32) #1

declare dso_local i32 @le16_to_cpu(i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
